# goodreads-metadata-scraper

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  healthcheck.yaml
src/: errors.rs  goodreads_id_fetcher.rs  lib.rs  metadata.rs  metadata_fetcher.rs  models.rs  request_builder.rs  search.rs
tests/: scraper.rs
