[package]
name = "goodreads-metadata-scraper"
version = "0.2.0"
edition = "2021"
authors = ["tiago.costa.sousa@proton.me"]
description = "A simple library to scrape book metadata from Goodreads"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/tiago-cos/goodreads-metadata-scraper"
repository = "https://github.com/tiago-cos/goodreads-metadata-scraper"
keywords = ["goodreads", "metadata", "scraper", "books", "library"]
categories = ["web-programming"]

[dependencies]
chrono = "0.4.40"
derive-new = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
scraper = "0.21.0"
serde_json = "1.0.140"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }

[lib]
name = "grscraper"
path = "src/lib.rs"
