[package]
name = "goodreads-metadata-scraper"
version = "0.2.2"
edition = "2021"
authors = ["tiago.costa.sousa@proton.me"]
description = "A simple library to scrape book metadata from Goodreads"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/tiago-cos/goodreads-metadata-scraper"
repository = "https://github.com/tiago-cos/goodreads-metadata-scraper"
keywords = ["goodreads", "metadata", "scraper", "books", "library"]
categories = ["web-programming"]

[dependencies]
chrono = "0.4.41"
derive-new = "0.7.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
serde_json = "1.0.140"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }

[lib]
name = "grscraper"
path = "src/lib.rs"
